treewide: i18n - backport translations
Backport translations from openwrt-19.07.
Sync translations.

Signed-off-by: Hannu Nyman <hannu.nyman@iki.fi>

--- a/applications/luci-app-adblock/po/zh-tw/adblock.po
+++ b/applications/luci-app-adblock/po/zh-tw/adblock.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2020-11-10 18:41+0000\n"
-"Last-Translator: Hulen <shift0106@gmail.com>\n"
+"PO-Revision-Date: 2020-12-28 18:20+0000\n"
+"Last-Translator: operator <omniplay@hotmail.com>\n"
 "Language-Team: Chinese (Traditional) <https://hosted.weblate.org/projects/"
 "openwrt/luciapplicationsadblock/zh_Hant/>\n"
 "Language: zh_Hant\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.4-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 msgid "'Jail' Blocklist Creation"
 msgstr ""
@@ -314,7 +314,7 @@ msgid "Trigger Delay"
 msgstr "觸發延遲"
 
 msgid "Verbose Debug Logging"
-msgstr "詳細的偵錯記錄"
+msgstr "詳細偵錯記錄"
 
 msgid "View Logfile"
 msgstr "檢視日誌檔案"
