--- a/applications/luci-app-ahcp/po/tr/ahcp.po
+++ b/applications/luci-app-ahcp/po/tr/ahcp.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2020-11-28 20:18+0000\n"
-"Last-Translator: Oğuz Ersen <oguzersen@protonmail.com>\n"
+"PO-Revision-Date: 2020-12-13 17:32+0000\n"
+"Last-Translator: Neomec Anderson <neomec@gmail.com>\n"
 "Language-Team: Turkish <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsahcp/tr/>\n"
 "Language: tr\n"
@@ -39,19 +39,19 @@ msgid "Age"
 msgstr "Yaş"
 
 msgid "Announced DNS servers"
-msgstr ""
+msgstr "Bildirilen DNS sunucuları"
 
 msgid "Announced NTP servers"
-msgstr ""
+msgstr "Bildirilen NTP sunucuları"
 
 msgid "Announced prefixes"
-msgstr ""
+msgstr "Açıklanan önekler"
 
 msgid "Collecting data..."
 msgstr "Veri alınıyor..."
 
 msgid "Forwarder"
-msgstr ""
+msgstr "Yönlendirici"
 
 msgid "General Setup"
 msgstr "Genel Kurulum"
@@ -75,7 +75,7 @@ msgid "Log file"
 msgstr "Günlük kaydı dosyası"
 
 msgid "Multicast address"
-msgstr ""
+msgstr "Multicast adresi"
 
 msgid "Operation mode"
 msgstr "Çalışma Modu"
@@ -93,13 +93,13 @@ msgid "Server"
 msgstr "Sunucu"
 
 msgid "Specifies the announced IPv4 and IPv6 NTP servers"
-msgstr ""
+msgstr "Duyurulan IPv4 ve IPv6 NTP sunucularını belirtir"
 
 msgid "Specifies the announced IPv4 and IPv6 name servers"
-msgstr ""
+msgstr "Duyurulan IPv4 ve IPv6 isim sunucularını belirtir"
 
 msgid "Specifies the announced IPv4 and IPv6 network prefixes in CIDR notation"
-msgstr ""
+msgstr "CIDR gösteriminde duyurulan IPv4 ve IPv6 ağ öneklerini belirtir"
 
 msgid "The AHCP Service is not running."
 msgstr "AHCP Hizmeti çalışmıyor."
