--- a/applications/luci-app-commands/po/zh-tw/commands.po
+++ b/applications/luci-app-commands/po/zh-tw/commands.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2020-06-30 13:41+0000\n"
-"Last-Translator: Hulen <shift0106@gmail.com>\n"
+"PO-Revision-Date: 2020-12-27 15:29+0000\n"
+"Last-Translator: operator <omniplay@hotmail.com>\n"
 "Language-Team: Chinese (Traditional) <https://hosted.weblate.org/projects/"
 "openwrt/luciapplicationscommands/zh_Hant/>\n"
 "Language: zh_Hant\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.2-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 msgid "A short textual description of the configured command"
 msgstr "簡短描述指令用途"
@@ -23,7 +23,7 @@ msgstr "簡短描述指令用途"
 msgid ""
 "Allow executing the command and downloading its output without prior "
 "authentication"
-msgstr "允許直接執行指令並獲取其輸出，無須事先驗證。"
+msgstr "允許執行命令並下載其輸出, 無須事先認證。"
 
 msgid "Allow the user to provide additional command line arguments"
 msgstr "允許使用者提供額外的指令列引數"
@@ -38,16 +38,16 @@ msgid "Code:"
 msgstr "狀態碼："
 
 msgid "Collecting data..."
-msgstr "收集資料中..."
+msgstr "收集資料中……"
 
 msgid "Command"
-msgstr "指令"
+msgstr "命令"
 
 msgid "Command executed successfully."
 msgstr "指令成功執行。"
 
 msgid "Command exited with status code"
-msgstr "指令退出，狀態碼："
+msgstr "指令退出附狀態碼"
 
 msgid "Command failed"
 msgstr "指令失敗"
