--- a/applications/luci-app-minidlna/po/zh-tw/minidlna.po
+++ b/applications/luci-app-minidlna/po/zh-tw/minidlna.po
@@ -5,8 +5,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2020-06-28 19:19+0000\n"
-"Last-Translator: Hulen <shift0106@gmail.com>\n"
+"PO-Revision-Date: 2020-12-26 06:29+0000\n"
+"Last-Translator: operator <omniplay@hotmail.com>\n"
 "Language-Team: Chinese (Traditional) <https://hosted.weblate.org/projects/"
 "openwrt/luciapplicationsminidlna/zh_Hant/>\n"
 "Language: zh_Hant\n"
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.2-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 msgid "Advanced Settings"
 msgstr "進階設定"
@@ -113,12 +113,12 @@ msgstr "設定自定義名稱。"
 msgid ""
 "Set this if you would like to specify the directory where you want MiniDLNA "
 "to store its database and album art cache."
-msgstr "設定 miniDLNA 資料庫和專輯封面快取目錄"
+msgstr "設定 miniDLNA 資料庫和專輯封面快取目錄."
 
 msgid ""
 "Set this if you would like to specify the directory where you want MiniDLNA "
 "to store its log file."
-msgstr "設定 MiniDLNA 日誌目錄"
+msgstr "設定 MiniDLNA 日誌目錄."
 
 msgid ""
 "Set this to allow serving content outside the media root (via symlinks)."
@@ -176,7 +176,7 @@ msgid "Video"
 msgstr "視訊"
 
 msgid "miniDLNA"
-msgstr "miniDLNA"
+msgstr "微型DLNA"
 
 msgid "miniDLNA Status"
 msgstr "miniDLNA 狀態"
