--- a/applications/luci-app-mwan3/po/zh-tw/mwan3.po
+++ b/applications/luci-app-mwan3/po/zh-tw/mwan3.po
@@ -3,15 +3,15 @@
 #
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2020-11-05 13:59+0000\n"
-"Last-Translator: Tragic Life <huziyang2002@outlook.com>\n"
+"PO-Revision-Date: 2020-12-26 06:29+0000\n"
+"Last-Translator: operator <omniplay@hotmail.com>\n"
 "Language-Team: Chinese (Traditional) <https://hosted.weblate.org/projects/"
 "openwrt/luciapplicationsmwan3/zh_Hant/>\n"
 "Language: zh_Hant\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.3.2-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 msgid "%d hour"
 msgstr "%d 小時"
@@ -47,7 +47,7 @@ msgid "Check routing table"
 msgstr "檢查路由表"
 
 msgid "Collecting data..."
-msgstr "收集資料中..."
+msgstr "收集資料中……"
 
 msgid "Destination address"
 msgstr "目標位址"
@@ -62,7 +62,7 @@ msgid "Diagnostics"
 msgstr "診斷"
 
 msgid "Disabled"
-msgstr "已禁用"
+msgstr "已停用"
 
 msgid ""
 "Downed interface will be deemed up after this many successful ping tests"
@@ -96,10 +96,10 @@ msgid "Globals"
 msgstr "全局"
 
 msgid "Hotplug ifdown"
-msgstr "Hotplug ifdown"
+msgstr "熱插拔ifdown"
 
 msgid "Hotplug ifup"
-msgstr "Hotplug ifup"
+msgstr "熱插拔ifup"
 
 msgid "INFO: MWAN not running"
 msgstr "資訊：MWAN 沒有執行"
@@ -236,7 +236,7 @@ msgid "Members assigned"
 msgstr "分配的成員"
 
 msgid "Metric"
-msgstr "躍點數"
+msgstr "公測數"
 
 msgid ""
 "Name of IPset rule. Requires IPset rule in /etc/dnsmasq.conf (eg \"ipset=/"
@@ -285,7 +285,7 @@ msgid "Ping tracking IP"
 msgstr "Ping 跟蹤 IP"
 
 msgid "Policies"
-msgstr "策略"
+msgstr "政策"
 
 msgid ""
 "Policies are profiles grouping one or more members controlling how MWAN "
@@ -303,7 +303,7 @@ msgstr ""
 "該與介面、成員、規則中的任意一個設定項使用相同的名稱"
 
 msgid "Policy"
-msgstr "策略"
+msgstr "政策"
 
 msgid "Policy assigned"
 msgstr "分配的策略"
@@ -341,10 +341,10 @@ msgid "Seconds. Acceptable values: 1-1000000. Defaults to 600 if not set"
 msgstr "單位為秒。接受的值：1-1000000。留空則使用預設值 600 秒"
 
 msgid "Source address"
-msgstr "源位址"
+msgstr "來源位址"
 
 msgid "Source port"
-msgstr "源埠"
+msgstr "來源埠"
 
 msgid "Sticky"
 msgstr "粘滯模式"
@@ -452,7 +452,7 @@ msgid "Waiting for command to complete..."
 msgstr "正在等待指令完成…"
 
 msgid "Weight"
-msgstr "比重"
+msgstr "重量"
 
 msgid ""
 "When all policy members are offline use this behavior for matched traffic"
