--- a/applications/luci-app-nlbwmon/po/ru/nlbwmon.po
+++ b/applications/luci-app-nlbwmon/po/ru/nlbwmon.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: LuCI: nlbwmon\n"
 "POT-Creation-Date: 2018-01-21 19:45+0300\n"
-"PO-Revision-Date: 2020-07-17 19:42+0000\n"
-"Last-Translator: Artem <KovalevArtem.ru@gmail.com>\n"
+"PO-Revision-Date: 2020-12-28 18:20+0000\n"
+"Last-Translator: Max Smolik <makcum15@gmail.com>\n"
 "Language-Team: Russian <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsnlbwmon/ru/>\n"
 "Language: ru\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.2-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 "Project-Info: Это технический перевод, не дословный. Главное-удобный русский "
 "интерфейс, все проверялось в графическом режиме, совместим с другими apps\n"
 
@@ -105,7 +105,7 @@ msgid "Advanced Settings"
 msgstr "Дополнительные настройки"
 
 msgid "Application"
-msgstr "Приложение"
+msgstr "Протокол"
 
 msgid "Application Protocols"
 msgstr "Прикладные протоколы"
@@ -183,7 +183,7 @@ msgstr ""
 "указать 27-е июля или 24-е февраля."
 
 msgid "Display"
-msgstr "Отобразить"
+msgstr "Показать"
 
 msgid "Down. (Bytes / Pkts.)"
 msgstr "Внутр. (Bytes / Pkts.)"
@@ -192,7 +192,7 @@ msgid "Download (Bytes / Packets)"
 msgstr "Получение (Байты / Пакеты)"
 
 msgid "Download / Application"
-msgstr "Скачивание / Приложение"
+msgstr "Скачано / Протокол"
 
 msgid "Download Database Backup"
 msgstr "Скачать резервную копию базы данных"
@@ -228,7 +228,7 @@ msgid "Hostname: <big id=\"bubble-hostname\">example.org</big>"
 msgstr "Имя хоста: <big id=\"bubble-hostname\">example.org</big>"
 
 msgid "IPv4 vs. IPv6"
-msgstr "IPv4 против IPv6"
+msgstr "IPv4 vs. IPv6"
 
 msgid "IPv6"
 msgstr "IPv6"
@@ -371,7 +371,7 @@ msgid "Upload (Bytes / Packets)"
 msgstr "Передача (Байты / Пакеты)"
 
 msgid "Upload / Application"
-msgstr "Загрузка / Приложение"
+msgstr "Загружено / Протокол"
 
 msgid "Vendor: <big id=\"bubble-vendor\">Example Corp.</big>"
 msgstr "Производитель: <big id=\"bubble-vendor\">Example Corp.</big>"
@@ -384,9 +384,9 @@ msgid ""
 "makes accessing old data slightly slower but helps to reduce storage "
 "requirements."
 msgstr ""
-"Использовать ли gzip сжатие для архивных файлов базы данных. Сжатие файлов "
-"базы данных сделает доступ к старым данным немного медленнее, но поможет "
-"снизить требования к хранилищу."
+"Использовать gzip сжатие для архивных файлов базы данных. Сжатие файлов базы "
+"данных сделает доступ к старым данным немного медленнее, но поможет снизить "
+"требования к хранилищу."
 
 msgid ""
 "Whether to preallocate the maximum possible database size in memory. This is "
