--- a/applications/luci-app-olsr/po/zh-tw/olsr.po
+++ b/applications/luci-app-olsr/po/zh-tw/olsr.po
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2020-11-05 13:59+0000\n"
-"Last-Translator: Tragic Life <huziyang2002@outlook.com>\n"
+"PO-Revision-Date: 2020-12-29 11:16+0000\n"
+"Last-Translator: operator <omniplay@hotmail.com>\n"
 "Language-Team: Chinese (Traditional) <https://hosted.weblate.org/projects/"
 "openwrt/luciapplicationsolsr/zh_Hant/>\n"
 "Language: zh_Hant\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.3.2-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 msgid "Active MID announcements"
 msgstr "活動的 MID 通告"
@@ -58,7 +58,7 @@ msgid "Can only be a valid IPv6 address or 'default'"
 msgstr "必須是有效的 IPv6 位址，或“預設”"
 
 msgid "Configuration"
-msgstr "設定"
+msgstr "組態"
 
 msgid ""
 "Could not get any data. Make sure the jsoninfo plugin is installed and "
@@ -70,7 +70,7 @@ msgid "Display"
 msgstr "顯示"
 
 msgid "Downlink"
-msgstr "下行連結"
+msgstr "下行"
 
 msgid "Download Config"
 msgstr "下載配置"
@@ -86,10 +86,10 @@ msgid ""
 "parameters are ignored. Default is \"no\"."
 msgstr ""
 "啟用 SmartGateway。如果禁用，則將忽略 SmartGateway 的其他所有引數。預設"
-"值：“no”"
+"值：“no”."
 
 msgid "Enable this interface."
-msgstr "啟用這個埠"
+msgstr "啟用這個界面."
 
 msgid "Enabled"
 msgstr "已啟用"
@@ -123,7 +123,7 @@ msgid "General Settings"
 msgstr "一般設定"
 
 msgid "General settings"
-msgstr "一般設定"
+msgstr "一般設定值"
 
 msgid "Good (2 < ETX < 4)"
 msgstr "好（2 < ETX < 4）"
@@ -150,7 +150,7 @@ msgid "HNA6 Announcements"
 msgstr "HNA 通告"
 
 msgid "Hello"
-msgstr "Hello"
+msgstr "Hello訊息"
 
 msgid "Hello interval"
 msgstr "Hello 間隔"
@@ -165,10 +165,10 @@ msgid "Hide IPv6"
 msgstr "隱藏 IPv6"
 
 msgid "Hna4"
-msgstr "Hna4"
+msgstr "Hna4網路封包"
 
 msgid "Hna6"
-msgstr "Hna6"
+msgstr "Hna6網路封包"
 
 msgid "Hops"
 msgstr "躍點"
@@ -206,7 +206,7 @@ msgid "IPv4"
 msgstr "IPv4"
 
 msgid "IPv4 broadcast"
-msgstr "IPv4 廣播位址"
+msgstr "IPv4 廣播"
 
 msgid ""
 "IPv4 broadcast address for outgoing OLSR packets. One useful example would "
@@ -328,10 +328,10 @@ msgid "Last hop"
 msgstr "最後一跳"
 
 msgid "Legend"
-msgstr "Legend"
+msgstr "傳說"
 
 msgid "Library"
-msgstr "庫"
+msgstr "函數庫"
 
 msgid "Link Quality Settings"
 msgstr "連結質量設定"
@@ -389,7 +389,7 @@ msgid "MID validity time"
 msgstr "MID 有效期"
 
 msgid "MTU"
-msgstr "MTU"
+msgstr "MTU最大傳輸單元"
 
 msgid "Main IP"
 msgstr "主要 IP"
@@ -402,7 +402,7 @@ msgstr ""
 "自“127.0.0.1”的連線。"
 
 msgid "Metric"
-msgstr "度量"
+msgstr "公測數"
 
 msgid "Mode"
 msgstr "模式"
@@ -440,10 +440,10 @@ msgid "Neighbour IP"
 msgstr "鄰居 IP"
 
 msgid "Neighbours"
-msgstr "鄰居"
+msgstr "網路芳鄰"
 
 msgid "Netmask"
-msgstr "子網掩碼"
+msgstr "子網路遮罩"
 
 msgid "Network"
 msgstr "網路"
@@ -461,7 +461,7 @@ msgid "OLSR"
 msgstr "OLSR"
 
 msgid "OLSR - Display Options"
-msgstr "OLSR  - 顯示選項"
+msgstr "OLSR－顯示選項"
 
 msgid "OLSR - HNA-Announcements"
 msgstr "OLSR - HNA-通告"
@@ -578,7 +578,7 @@ msgid "Signal Noise Ratio in dB"
 msgstr "信噪比（dB）"
 
 msgid "SmartGW"
-msgstr "SmartGW"
+msgstr "SmartGW智慧臨時匝道器"
 
 msgid "SmartGW announcements"
 msgstr "SmartGW 通告"
@@ -587,7 +587,7 @@ msgid "SmartGateway is not configured on this system."
 msgstr "此係統上未配置 SmartGateway。"
 
 msgid "Source address"
-msgstr "源位址"
+msgstr "來源位址"
 
 msgid ""
 "Specifies the speed of the uplink in kilobits/s. First parameter is "
@@ -682,7 +682,7 @@ msgid "Unable to connect to the OLSR daemon!"
 msgstr "無法連線到 OLSR 守護程式！"
 
 msgid "Uplink"
-msgstr "上行連結"
+msgstr "上行"
 
 msgid "Uplink uses NAT"
 msgstr "上行連結使用 NAT"
@@ -713,7 +713,7 @@ msgstr ""
 "它。"
 
 msgid "Weight"
-msgstr "體重"
+msgstr "重量"
 
 msgid ""
 "When multiple links exist between hosts the weight of interface is used to "
@@ -752,7 +752,7 @@ msgid "Yellow"
 msgstr "黃色"
 
 msgid "no"
-msgstr "否"
+msgstr "不"
 
 msgid "yes"
 msgstr "是"
