--- a/applications/luci-app-polipo/po/zh-tw/polipo.po
+++ b/applications/luci-app-polipo/po/zh-tw/polipo.po
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2020-06-28 19:19+0000\n"
-"Last-Translator: Hulen <shift0106@gmail.com>\n"
+"PO-Revision-Date: 2020-12-27 15:29+0000\n"
+"Last-Translator: operator <omniplay@hotmail.com>\n"
 "Language-Team: Chinese (Traditional) <https://hosted.weblate.org/projects/"
 "openwrt/luciapplicationspolipo/zh_Hant/>\n"
 "Language: zh_Hant\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.2-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 msgid "Advanced Settings"
 msgstr "進階設定"
@@ -30,7 +30,7 @@ msgid ""
 msgstr "支援 HTTP 基本身份驗證。提供使用者名稱和密碼格式為：使用者名稱:密碼。"
 
 msgid "Configuration"
-msgstr "設定"
+msgstr "組態"
 
 msgid "DNS and Query Settings"
 msgstr "DNS 及查詢設定"
@@ -63,7 +63,7 @@ msgid "In RAM cache size (in bytes)"
 msgstr "RAM 快取大小（以位元組表示）"
 
 msgid "Listen address"
-msgstr "監聽位址"
+msgstr "監聽地址"
 
 msgid "Listen port"
 msgstr "監聽埠"
@@ -80,7 +80,7 @@ msgid "Log file location"
 msgstr "日誌存放位置"
 
 msgid "Log to syslog"
-msgstr "記錄日誌到 syslog"
+msgstr "將日誌寫入 syslog"
 
 msgid "Logging and RAM"
 msgstr "記錄和 RAM"
