--- a/applications/luci-app-transmission/po/zh-tw/transmission.po
+++ b/applications/luci-app-transmission/po/zh-tw/transmission.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-10-08 14:06+0200\n"
-"PO-Revision-Date: 2020-11-05 13:59+0000\n"
-"Last-Translator: Tragic Life <huziyang2002@outlook.com>\n"
+"PO-Revision-Date: 2020-12-28 18:20+0000\n"
+"Last-Translator: operator <omniplay@hotmail.com>\n"
 "Language-Team: Chinese (Traditional) <https://hosted.weblate.org/projects/"
 "openwrt/luciapplicationstransmission/zh_Hant/>\n"
 "Language: zh_Hant\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.3.2-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 msgid "Alternative download speed"
 msgstr "臨時下載限速"
@@ -87,7 +87,7 @@ msgid "Enabled"
 msgstr "已啟用"
 
 msgid "Encryption"
-msgstr "加密"
+msgstr "加密(Encryption)"
 
 msgid "Error"
 msgstr "錯誤"
@@ -275,12 +275,12 @@ msgid "Speed limit up enabled"
 msgstr "上傳限速已啟用"
 
 msgid "Transmission"
-msgstr "傳輸"
+msgstr "Transmission"
 
 msgid ""
 "Transmission daemon is a simple bittorrent client, here you can configure "
 "the settings."
-msgstr "Transmission 是一個簡單的 bittorrent 客戶端，在這裡您可以配置其設定。"
+msgstr "Transmission 是一個簡單的 BitTorrent 客戶端，您可以在這裡設定組態。"
 
 msgid "Trash original torrent files"
 msgstr "刪除種子原始檔"
@@ -292,7 +292,7 @@ msgid "Watch directory"
 msgstr "輪詢種子目錄"
 
 msgid "in minutes from midnight"
-msgstr "從晚上 00:00 起的分鐘數，限速到臨時速度"
+msgstr "從子夜（00:00）到計劃限速起始／終止的分鐘數"
 
 msgid "preallocation"
 msgstr "磁碟預分配策略"
