--- a/applications/luci-app-uhttpd/po/ja/uhttpd.po
+++ b/applications/luci-app-uhttpd/po/ja/uhttpd.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2020-11-14 12:48+0000\n"
-"Last-Translator: RyotaGamer <21ryotagamer@gmail.com>\n"
+"PO-Revision-Date: 2020-12-13 05:29+0000\n"
+"Last-Translator: Ryota <21ryotagamer@gmail.com>\n"
 "Language-Team: Japanese <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsuhttpd/ja/>\n"
 "Language: ja\n"
@@ -61,7 +61,7 @@ msgid "Do not follow symlinks outside document root"
 msgstr "ドキュメント ルート外へのシンボリックリンクを追随しない"
 
 msgid "Do not generate directory listings."
-msgstr "ディレクトリの待ち受けを生成しない"
+msgstr "ディレクトリのリッスンを生成しない"
 
 msgid "Document root"
 msgstr "ドキュメント ルート"
@@ -88,7 +88,7 @@ msgid "General Settings"
 msgstr "一般設定"
 
 msgid "HTTP listeners (address:port)"
-msgstr "HTTP 待ち受け（アドレス:ポート）"
+msgstr "HTTP リッスン（アドレス:ポート）"
 
 msgid "HTTPS Certificate (DER Encoded)"
 msgstr "HTTPS 証明書（DER エンコード）"
@@ -97,7 +97,7 @@ msgid "HTTPS Private Key (DER Encoded)"
 msgstr "HTTPS 秘密鍵（DER エンコード）"
 
 msgid "HTTPS listener (address:port)"
-msgstr "HTTPS 待ち受け（アドレス:ポート）"
+msgstr "HTTPS リッスン（アドレス:ポート）"
 
 msgid "Ignore private IPs on public interface"
 msgstr "公開側インターフェースでのプライベートIPを無視する"
