--- a/applications/luci-app-vpnbypass/po/zh-tw/vpnbypass.po
+++ b/applications/luci-app-vpnbypass/po/zh-tw/vpnbypass.po
@@ -3,21 +3,21 @@
 #
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2020-06-29 05:51+0000\n"
-"Last-Translator: Hulen <shift0106@gmail.com>\n"
+"PO-Revision-Date: 2020-12-27 15:29+0000\n"
+"Last-Translator: operator <omniplay@hotmail.com>\n"
 "Language-Team: Chinese (Traditional) <https://hosted.weblate.org/projects/"
 "openwrt/luciapplicationsvpnbypass/zh_Hant/>\n"
 "Language: zh_Hant\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.2-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 msgid "%s (disabled)"
-msgstr ""
+msgstr "％s（已禁用）"
 
 msgid "%s is not installed or not found"
-msgstr ""
+msgstr "%s 未安裝或找不到"
 
 msgid "Disable"
 msgstr "停用"
@@ -28,7 +28,7 @@ msgstr "要繞過的域"
 msgid ""
 "Domains to be accessed directly (outside of the VPN tunnel), see %sREADME%s "
 "for syntax"
-msgstr ""
+msgstr "要直接存取的網域(在VPN隧道之外)，請參見 ％sREADME％s 的語法"
 
 msgid "Enable"
 msgstr "啟用"
@@ -65,10 +65,10 @@ msgid "Remote ports to trigger VPN Bypass"
 msgstr "觸發 VPN 繞過的遠端埠"
 
 msgid "Restart"
-msgstr ""
+msgstr "重新啟動"
 
 msgid "Running"
-msgstr ""
+msgstr "運行中"
 
 msgid "Service Status"
 msgstr "服務狀態"
@@ -86,13 +86,13 @@ msgid "Stopped"
 msgstr "已停止"
 
 msgid "VPN"
-msgstr ""
+msgstr "VPN虛擬私人網路"
 
 msgid "VPN Bypass"
 msgstr "VPN 繞過"
 
 msgid "VPN Bypass Rules"
-msgstr ""
+msgstr "VPN繞道規則"
 
 msgid "VPN Bypass Settings"
 msgstr "VPN 繞過設定"
