--- a/modules/luci-base/po/it/base.po
+++ b/modules/luci-base/po/it/base.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: LuCI\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-06-10 03:40+0200\n"
-"PO-Revision-Date: 2020-11-12 02:29+0000\n"
-"Last-Translator: J. Lavoie <j.lavoie@net-c.ca>\n"
+"PO-Revision-Date: 2020-12-11 03:50+0000\n"
+"Last-Translator: AndreaEM <andreyodj@gmail.com>\n"
 "Language-Team: Italian <https://hosted.weblate.org/projects/openwrt/luci/it/"
 ">\n"
 "Language: it\n"
@@ -15,7 +15,7 @@ msgstr ""
 "X-Generator: Weblate 4.4-dev\n"
 
 msgid "%s is untagged in multiple VLANs!"
-msgstr ""
+msgstr "%s non è taggato in VLAN multiple!"
 
 msgid "(%d minute window, %d second interval)"
 msgstr "(finestra di %d minuti, intervallo di %d secondi)"
@@ -42,10 +42,10 @@ msgid "-- match by device --"
 msgstr ""
 
 msgid "-- match by label --"
-msgstr ""
+msgstr "-- corrispondenza per etichetta --"
 
 msgid "-- match by uuid --"
-msgstr ""
+msgstr "-- corrispondenza per uuid --"
 
 msgid "1 Minute Load:"
 msgstr "Carico in 1 minuto:"
@@ -260,7 +260,7 @@ msgid "Additional Hosts files"
 msgstr "File Hosts aggiuntivo"
 
 msgid "Additional servers file"
-msgstr ""
+msgstr "File server addizionali"
 
 msgid "Address"
 msgstr "Indirizzo"
@@ -421,9 +421,8 @@ msgid ""
 "Assign prefix parts using this hexadecimal subprefix ID for this interface."
 msgstr ""
 
-#, fuzzy
 msgid "Associated Stations"
-msgstr "Dispositivi Wi-Fi connessi"
+msgstr "Stazioni associate"
 
 msgid "Auth Group"
 msgstr ""
@@ -1543,7 +1542,6 @@ msgstr "Ignora file resolv"
 msgid "Image"
 msgstr "Immagine"
 
-#, fuzzy
 msgid "In"
 msgstr "In"
 
@@ -1636,12 +1634,11 @@ msgstr "Username e/o password non validi! Per favore riprova."
 msgid "Isolate Clients"
 msgstr "Isola i Client"
 
-#, fuzzy
 msgid ""
 "It appears that you are trying to flash an image that does not fit into the "
 "flash memory, please verify the image file!"
 msgstr ""
-"Sembra tu stia provando a flashare un'immagine più grande delle dimensioni "
+"Sembra tu stia provando a scrivere un'immagine più grande delle dimensioni "
 "della memoria flash, per favore controlla il file!"
 
 msgid "JavaScript required!"
@@ -1823,7 +1820,6 @@ msgstr "Ora locale"
 msgid "Local domain"
 msgstr "Dominio Locale"
 
-#, fuzzy
 msgid ""
 "Local domain specification. Names matching this domain are never forwarded "
 "and are resolved from DHCP or hosts files only"
