--- a/modules/luci-base/po/tr/base.po
+++ b/modules/luci-base/po/tr/base.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2020-11-28 20:18+0000\n"
-"Last-Translator: Oğuz Ersen <oguzersen@protonmail.com>\n"
+"PO-Revision-Date: 2020-12-13 17:32+0000\n"
+"Last-Translator: İsmail Karslı <ismail541236@gmail.com>\n"
 "Language-Team: Turkish <https://hosted.weblate.org/projects/openwrt/luci/tr/"
 ">\n"
 "Language: tr\n"
@@ -61,20 +61,22 @@ msgstr "464XLAT (CLAT)"
 msgid "5 Minute Load:"
 msgstr "5 Dakikalık Yük:"
 
+#, fuzzy
 msgid "6-octet identifier as a hex string - no colons"
-msgstr ""
+msgstr "Onaltılık dizge olarak 6 sekizli tanımlayıcı - iki nokta üst üste yok"
 
 msgid "802.11r Fast Transition"
 msgstr "802.11r Hızlı Değişim"
 
 msgid "802.11w Association SA Query maximum timeout"
-msgstr ""
+msgstr "802.11w Bağlantı SA Sorgu maksimum zaman aşımı"
 
 msgid "802.11w Association SA Query retry timeout"
-msgstr ""
+msgstr "802.11w Bağlantı SA Sorgusu yeniden deneme zaman aşımı"
 
+#, fuzzy
 msgid "802.11w Management Frame Protection"
-msgstr ""
+msgstr "802.11w Yönetim Çerçeve Koruması"
 
 msgid "802.11w maximum timeout"
 msgstr "802.11w maksimum zaman aşımı"
@@ -192,11 +194,15 @@ msgstr "ATM Sanal Kanal Tanımlayıcı (VCI)"
 msgid "ATM Virtual Path Identifier (VPI)"
 msgstr "ATM Sanal Yol Tanımlayıcı (VPI)"
 
+#, fuzzy
 msgid ""
 "ATM bridges expose encapsulated ethernet in AAL5 connections as virtual "
 "Linux network interfaces which can be used in conjunction with DHCP or PPP "
 "to dial into the provider network."
 msgstr ""
+"ATM köprüleri, AAL5 bağlantılarında kapsüllenmiş ethernet'i, sağlayıcı ağına "
+"bağlanmak için DHCP veya PPP ile birlikte kullanılabilen sanal Linux ağ "
+"arayüzleri olarak ortaya çıkarır."
 
 msgid "ATM device number"
 msgstr "ATM cihaz numarası"
@@ -275,13 +281,15 @@ msgstr ""
 msgid "Alert"
 msgstr "Uyarı"
 
+#, fuzzy
 msgid ""
 "Allocate IP addresses sequentially, starting from the lowest available "
 "address"
-msgstr ""
+msgstr "Mevcut en düşük adresten başlayarak IP adreslerini sırayla tahsis edin"
 
+#, fuzzy
 msgid "Allocate IP sequentially"
-msgstr ""
+msgstr "Sırayla IP tahsis edin"
 
 # "Secure Shell" için ne kullanılabilinir bir fikrim yok.
 msgid "Allow <abbr title=\"Secure Shell\">SSH</abbr> password authentication"
@@ -295,7 +303,7 @@ msgid "Allow listed only"
 msgstr "Yanlızca listelenenlere izin ver"
 
 msgid "Allow localhost"
-msgstr ""
+msgstr "Yerel ağa izin ver"
 
 msgid "Allow remote hosts to connect to local SSH forwarded ports"
 msgstr ""
@@ -303,10 +311,11 @@ msgstr ""
 "bağlanmasına izin ver"
 
 msgid "Allow root logins with password"
-msgstr ""
+msgstr "Parola ile root girişlerine izin ver"
 
+#, fuzzy
 msgid "Allow the <em>root</em> user to login with password"
-msgstr ""
+msgstr "<em> root </em> kullanıcısının parolayla oturum açmasına izin ver"
 
 msgid ""
 "Allow upstream responses in the 127.0.0.0/8 range, e.g. for RBL services"
@@ -383,7 +392,7 @@ msgid "Announced DNS domains"
 msgstr ""
 
 msgid "Announced DNS servers"
-msgstr ""
+msgstr "Bildirilen DNS sunucuları"
 
 msgid "Anonymous Identity"
 msgstr ""
