--- a/applications/luci-app-ahcp/po/zh-tw/ahcp.po
+++ b/applications/luci-app-ahcp/po/zh-tw/ahcp.po
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2020-06-28 19:19+0000\n"
-"Last-Translator: Hulen <shift0106@gmail.com>\n"
+"PO-Revision-Date: 2020-12-28 18:20+0000\n"
+"Last-Translator: operator <omniplay@hotmail.com>\n"
 "Language-Team: Chinese (Traditional) <https://hosted.weblate.org/projects/"
 "openwrt/luciapplicationsahcp/zh_Hant/>\n"
 "Language: zh_Hant\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.2-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 msgid "AHCP Server"
 msgstr "AHCP 伺服器"
@@ -41,7 +41,7 @@ msgid "Age"
 msgstr "有效期"
 
 msgid "Announced DNS servers"
-msgstr "已發布的 DNS 伺服器"
+msgstr "已發布的 DNS 伺服器群"
 
 msgid "Announced NTP servers"
 msgstr "宣告的 NTP 伺服器"
@@ -50,7 +50,7 @@ msgid "Announced prefixes"
 msgstr "宣告的位址字首"
 
 msgid "Collecting data..."
-msgstr "收集資料中..."
+msgstr "收集資料中……"
 
 msgid "Forwarder"
 msgstr "轉發器"
