--- a/applications/luci-app-aria2/po/zh-tw/aria2.po
+++ b/applications/luci-app-aria2/po/zh-tw/aria2.po
@@ -3,15 +3,15 @@
 #
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2020-11-05 13:59+0000\n"
-"Last-Translator: Tragic Life <huziyang2002@outlook.com>\n"
+"PO-Revision-Date: 2020-12-24 18:24+0000\n"
+"Last-Translator: operator <omniplay@hotmail.com>\n"
 "Language-Team: Chinese (Traditional) <https://hosted.weblate.org/projects/"
 "openwrt/luciapplicationsaria2/zh_Hant/>\n"
 "Language: zh_Hant\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.3.2-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 msgid "\"Falloc\" is not available in all cases."
 msgstr "\"Falloc\" 並不是在所有情況下都可用"
@@ -49,7 +49,7 @@ msgid "BitTorrent listen port"
 msgstr "BitTorrent 監聽連接埠"
 
 msgid "Collecting data..."
-msgstr "收集資料中..."
+msgstr "收集資料中……"
 
 msgid "Config file directory"
 msgstr "設置檔案的目錄"
@@ -124,7 +124,7 @@ msgid "No Authentication"
 msgstr "無認證"
 
 msgid "Notice"
-msgstr "注意"
+msgstr "通知"
 
 msgid "Off"
 msgstr "關閉"
