--- a/applications/luci-app-dnscrypt-proxy/po/ja/dnscrypt-proxy.po
+++ b/applications/luci-app-dnscrypt-proxy/po/ja/dnscrypt-proxy.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2020-10-17 15:26+0000\n"
-"Last-Translator: RyotaGamer <21ryotagamer@gmail.com>\n"
+"PO-Revision-Date: 2020-12-13 05:29+0000\n"
+"Last-Translator: Ryota <21ryotagamer@gmail.com>\n"
 "Language-Team: Japanese <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsdnscrypt-proxy/ja/>\n"
 "Language: ja\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.3.1-dev\n"
+"X-Generator: Weblate 4.4-dev\n"
 
 msgid "-------"
 msgstr "（利用不可）"
@@ -209,7 +209,7 @@ msgid "The config file '/etc/resolv-crypt.conf' already exist.<br />"
 msgstr "設定ファイル '/etc/resolv-crypt.conf' は既に存在しています。<br />"
 
 msgid "The listening port for DNS queries."
-msgstr "DNS クエリを待ち受けるポートです。"
+msgstr "DNS クエリをリッスンするポートです。"
 
 msgid ""
 "The local IPv4 or IPv6 address. The latter one should be specified within "
