--- a/applications/luci-app-minidlna/po/uk/minidlna.po
+++ b/applications/luci-app-minidlna/po/uk/minidlna.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2020-10-27 21:26+0000\n"
-"Last-Translator: Yevhen Chebotarev <gekinadres@gmail.com>\n"
+"PO-Revision-Date: 2020-12-15 16:29+0000\n"
+"Last-Translator: Jey Maluy <tizen48@gmail.com>\n"
 "Language-Team: Ukrainian <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsminidlna/uk/>\n"
 "Language: uk\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.3.2-dev\n"
+"X-Generator: Weblate 4.4-dev\n"
 
 msgid "Advanced Settings"
 msgstr "Розширені налаштування"
@@ -72,12 +72,13 @@ msgid ""
 "Model number the miniDLNA daemon will report to clients in its XML "
 "description."
 msgstr ""
+"Номер моделі, яку сервіс miniDLNA повідомляє клієнтам у своєму описі XML."
 
 msgid "Music"
 msgstr "Музика"
 
 msgid "Network interfaces to serve."
-msgstr ""
+msgstr "Мережеві інтерфейси для сервісу."
 
 msgid "Notify interval in seconds."
 msgstr "Інтервал сповіщення у секундах."
@@ -109,20 +110,28 @@ msgstr ""
 msgid ""
 "Set this if you want to customize the name that shows up on your clients."
 msgstr ""
+"Встановіть це, якщо ви хочете налаштувати ім’я, яке відображатиметься у "
+"ваших клієнтів."
 
 msgid ""
 "Set this if you would like to specify the directory where you want MiniDLNA "
 "to store its database and album art cache."
 msgstr ""
+"Встановіть це, якщо ви хочете вказати каталог, в якому ви хочете, щоб "
+"MiniDLNA зберігала свою базу даних та кеш-пам’ять альбому."
 
 msgid ""
 "Set this if you would like to specify the directory where you want MiniDLNA "
 "to store its log file."
 msgstr ""
+"Встановіть це, якщо ви хочете вказати каталог, в якому ви хочете, щоб "
+"MiniDLNA зберігала свій файл журналу"
 
 msgid ""
 "Set this to allow serving content outside the media root (via symlinks)."
 msgstr ""
+"Встановіть це, щоб дозволити розміщення вмісту поза кореневим медіа (за "
+"допомогою символьних посилань)."
 
 msgid ""
 "Set this to enable inotify monitoring to automatically discover new files."
@@ -132,6 +141,8 @@ msgid ""
 "Set this to enable support for streaming .jpg and .mp3 files to a TiVo "
 "supporting HMO."
 msgstr ""
+"Встановіть це, щоб увімкнути підтримку потокової передачі файлів .jpg та ."
+"mp3 на TiVo, що підтримує HMO."
 
 msgid ""
 "Set this to strictly adhere to DLNA standards. This will allow server-side "
