--- a/applications/luci-app-p910nd/po/ja/p910nd.po
+++ b/applications/luci-app-p910nd/po/ja/p910nd.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-05-19 19:36+0200\n"
-"PO-Revision-Date: 2020-07-26 02:09+0000\n"
-"Last-Translator: Satoru Yoshida <ramat@ram.ne.jp>\n"
+"PO-Revision-Date: 2020-12-13 05:29+0000\n"
+"Last-Translator: Ryota <21ryotagamer@gmail.com>\n"
 "Language-Team: Japanese <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsp910nd/ja/>\n"
 "Language: ja\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.2-dev\n"
+"X-Generator: Weblate 4.4-dev\n"
 
 msgid "Bidirectional mode"
 msgstr "双方向モード"
@@ -37,7 +37,7 @@ msgid "Settings"
 msgstr "設定"
 
 msgid "Specifies the interface to listen on."
-msgstr "待ち受けるインターフェースを指定します。"
+msgstr "リッスンするインターフェースを指定します。"
 
 msgid "TCP listener port."
 msgstr "TCP接続待ちポート"
