--- a/applications/luci-app-polipo/po/ja/polipo.po
+++ b/applications/luci-app-polipo/po/ja/polipo.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-05-19 19:36+0200\n"
-"PO-Revision-Date: 2020-11-15 19:47+0000\n"
-"Last-Translator: Satoru Yoshida <ramat@ram.ne.jp>\n"
+"PO-Revision-Date: 2020-12-13 05:29+0000\n"
+"Last-Translator: Ryota <21ryotagamer@gmail.com>\n"
 "Language-Team: Japanese <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationspolipo/ja/>\n"
 "Language: ja\n"
@@ -64,10 +64,10 @@ msgid "In RAM cache size (in bytes)"
 msgstr "RAM キャッシュサイズ (単位:バイト)"
 
 msgid "Listen address"
-msgstr "待ち受けアドレス"
+msgstr "リッスンアドレス"
 
 msgid "Listen port"
-msgstr "待ち受けポート"
+msgstr "リッスンポート"
 
 msgid ""
 "Location where polipo will cache files permanently. Use of external storage "
@@ -136,7 +136,7 @@ msgstr ""
 "のサイトではつながらなくなる可能性があります。"
 
 msgid "Port on which Polipo will listen"
-msgstr "Polipoが待ち受けを行うポート番号です。"
+msgstr "Polipoがリッスンを行うポート番号です。"
 
 msgid "Proxy"
 msgstr "プロキシ"
@@ -192,8 +192,8 @@ msgid ""
 "The interface on which Polipo will listen. To listen on all interfaces use "
 "0.0.0.0 or :: (IPv6)."
 msgstr ""
-"Polipoが待ち受けを行うインターフェースです。0.0.0.0 または :: (IPv6) を設定し"
-"た場合、すべてのインターフェースで待ち受けを行います。"
+"Polipoがリッスンを行うインターフェースです。0.0.0.0または:: (IPv6)を設定した"
+"場合、すべてのインターフェースでリッスンを行います。"
 
 msgid "Time after which cached files will be deleted"
 msgstr ""
@@ -222,10 +222,9 @@ msgid ""
 "that are allowed to connect. The format is IP address or network address "
 "(192.168.1.123, 192.168.1.0/24, 2001:660:116::/48 (IPv6))"
 msgstr ""
-"待ち受けアドレスを0.0.0.0 または :: (IPv6) に設定した場合、アクセスを許可する"
-"クライアントアドレスを設定してください。設定フォーマットはIPアドレスかネット"
-"ワークアドレスです。(例:192.168.1.123, 192.168.1.0/24, 2001:660:116::/48 "
-"(IPv6))"
+"リッスンアドレスを0.0.0.0 または :: (IPv6) に設定した場合、アクセスを許可する"
+"クライアントアドレスを設定してください。形式はIPアドレスかネットワークアドレ"
+"スです。(例:192.168.1.123, 192.168.1.0/24, 2001:660:116::/48 (IPv6))"
 
 msgid "enable"
 msgstr "有効にする"
