--- a/applications/luci-app-qos/po/zh-tw/qos.po
+++ b/applications/luci-app-qos/po/zh-tw/qos.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: LuCi Chinese Translation\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-25 22:10+0100\n"
-"PO-Revision-Date: 2020-06-29 05:51+0000\n"
-"Last-Translator: Hulen <shift0106@gmail.com>\n"
+"PO-Revision-Date: 2020-12-27 15:29+0000\n"
+"Last-Translator: operator <omniplay@hotmail.com>\n"
 "Language-Team: Chinese (Traditional) <https://hosted.weblate.org/projects/"
 "openwrt/luciapplicationsqos/zh_Hant/>\n"
 "Language: zh_Hant\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.2-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 msgid "Calculate overhead"
 msgstr "計算開銷"
@@ -48,7 +48,7 @@ msgid "Number of bytes"
 msgstr "位元組數"
 
 msgid "Ports"
-msgstr "埠"
+msgstr "埠號"
 
 msgid "Protocol"
 msgstr "協定"
