--- a/applications/luci-app-splash/po/zh-tw/splash.po
+++ b/applications/luci-app-splash/po/zh-tw/splash.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-06-28 08:58+0200\n"
-"PO-Revision-Date: 2020-03-09 14:34+0000\n"
-"Last-Translator: Trevor <wowpapa3232@gmail.com>\n"
+"PO-Revision-Date: 2020-12-27 15:29+0000\n"
+"Last-Translator: operator <omniplay@hotmail.com>\n"
 "Language-Team: Chinese (Traditional) <https://hosted.weblate.org/projects/"
 "openwrt/luciapplicationssplash/zh_Hant/>\n"
 "Language: zh_Hant\n"
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.0-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 msgid "Accept"
 msgstr "接受"
@@ -80,7 +80,7 @@ msgid "Clearance time"
 msgstr "清理時間"
 
 msgid "Client-Splash"
-msgstr "Client-Splash"
+msgstr "Client-Splash遠端存取用戶端"
 
 msgid ""
 "Client-Splash is a hotspot authentification system for wireless mesh "
@@ -141,7 +141,7 @@ msgid "Hostname"
 msgstr "主機名稱"
 
 msgid "IP Address"
-msgstr "IP 地址"
+msgstr "IP 位址"
 
 msgid ""
 "If you operate your own wifi equipment use channels different from ours."
@@ -174,7 +174,7 @@ msgid "Legally Prohibited content"
 msgstr "法律禁止內容"
 
 msgid "MAC Address"
-msgstr "MAC 地址"
+msgstr "MAC位址"
 
 msgid "MAC addresses in this list are blocked."
 msgstr "在本列表中的 MAC 地址將被阻擋。"
@@ -185,7 +185,7 @@ msgid ""
 msgstr "白名單中的 MAC 地址，可不用接受 splash，同時沒有頻寬限制。"
 
 msgid "Netmask"
-msgstr "網路掩碼"
+msgstr "子網路遮罩"
 
 msgid "Network"
 msgstr "網路"
@@ -214,7 +214,7 @@ msgid "Splash rules are integrated in this firewall zone"
 msgstr "Splash 規則整合在此防火牆區域中"
 
 msgid "Splashtext"
-msgstr "Splashtext"
+msgstr "閃爍標語"
 
 msgid ""
 "The network, like the Internet, is unencrypted and open. Each participant is "
@@ -264,7 +264,7 @@ msgstr ""
 "式。"
 
 msgid "Time remaining"
-msgstr "剩餘時間:"
+msgstr "剩餘時間"
 
 msgid ""
 "To ask for the reason why you have been blocked or ask for access again you "
