--- a/applications/luci-app-statistics/po/pl/statistics.po
+++ b/applications/luci-app-statistics/po/pl/statistics.po
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2020-11-27 20:38+0000\n"
-"Last-Translator: Marcin Net <marcin.net@linux.pl>\n"
+"PO-Revision-Date: 2020-12-23 13:29+0000\n"
+"Last-Translator: Adam Stańczyk <a.stanczyk@onet.pl>\n"
 "Language-Team: Polish <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsstatistics/pl/>\n"
 "Language: pl\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=n==1 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 "
 "|| n%100>=20) ? 1 : 2;\n"
-"X-Generator: Weblate 4.4-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 #: applications/luci-app-statistics/luasrc/statistics/plugins/apcups.lua:7
 #: applications/luci-app-statistics/luasrc/statistics/rrdtool/definitions/apcups.lua:7
@@ -204,11 +204,11 @@ msgstr "Przedział czasu wyświetlania »"
 
 #: applications/luci-app-statistics/luasrc/model/cbi/luci_statistics/email.lua:5
 msgid "E-Mail Plugin Configuration"
-msgstr "Konfiguracja wtyczki email"
+msgstr "Konfiguracja wtyczki e-mail"
 
 #: applications/luci-app-statistics/luasrc/statistics/plugins/email.lua:7
 msgid "Email"
-msgstr "Email"
+msgstr "E-mail"
 
 #: applications/luci-app-statistics/luasrc/model/cbi/luci_statistics/thermal.lua:19
 msgid "Empty value = monitor all"
@@ -880,7 +880,7 @@ msgid ""
 "to be used in conjunction with Mail::SpamAssasin::Plugin::Collectd but can "
 "be used in other ways as well."
 msgstr ""
-"Wtyczka email tworzy gniazdo w unix do transmisji statystyki-poczty do "
+"Wtyczka e-mail tworzy gniazdo w unix do transmisji statystyki-poczty do "
 "demona collectd. This plugin is primarily intended to be used in conjunction "
 "with Mail::SpamAssasin::Plugin::Collectd but can be used in other ways as "
 "well."
