--- a/applications/luci-app-tinyproxy/po/ja/tinyproxy.po
+++ b/applications/luci-app-tinyproxy/po/ja/tinyproxy.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-05-19 19:36+0200\n"
-"PO-Revision-Date: 2020-10-16 10:26+0000\n"
-"Last-Translator: RyotaGamer <21ryotagamer@gmail.com>\n"
+"PO-Revision-Date: 2020-12-13 05:29+0000\n"
+"Last-Translator: Ryota <21ryotagamer@gmail.com>\n"
 "Language-Team: Japanese <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationstinyproxy/ja/>\n"
 "Language: ja\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.3.1-dev\n"
+"X-Generator: Weblate 4.4-dev\n"
 
 msgid ""
 "<em>Via proxy</em> routes requests to the given target via the specifed "
@@ -130,10 +130,10 @@ msgstr ""
 "ポートを許可します。"
 
 msgid "Listen address"
-msgstr "待ち受けアドレス"
+msgstr "リッスンアドレス"
 
 msgid "Listen port"
-msgstr "待ち受けポート"
+msgstr "リッスンポート"
 
 msgid "Log file"
 msgstr "ログファイル"
@@ -205,7 +205,7 @@ msgid ""
 msgstr ""
 
 msgid "Specifies the HTTP port Tinyproxy is listening on for requests"
-msgstr "リクエストに対して、Tinyproxyが待ち受けるHTTPポートを設定します"
+msgstr "リクエストに対して、TinyproxyがリッスンするHTTPポートを設定します"
 
 msgid "Specifies the Tinyproxy hostname to use in the Via HTTP header"
 msgstr ""
@@ -215,7 +215,7 @@ msgid ""
 msgstr ""
 
 msgid "Specifies the addresses Tinyproxy is listening on for requests"
-msgstr "リクエストに対して、Tinyproxyが待ち受けるアドレスを設定します。"
+msgstr "リクエストに対して、Tinyproxyがリッスンするアドレスを設定します。"
 
 msgid "Specifies the group name the Tinyproxy process is running as"
 msgstr "Tinyproxyを実行するグループを設定します"
