--- a/applications/luci-app-upnp/po/zh-tw/upnp.po
+++ b/applications/luci-app-upnp/po/zh-tw/upnp.po
@@ -4,8 +4,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2020-06-30 13:41+0000\n"
-"Last-Translator: Hulen <shift0106@gmail.com>\n"
+"PO-Revision-Date: 2020-12-29 11:16+0000\n"
+"Last-Translator: operator <omniplay@hotmail.com>\n"
 "Language-Team: Chinese (Traditional) <https://hosted.weblate.org/projects/"
 "openwrt/luciapplicationsupnp/zh_Hant/>\n"
 "Language: zh_Hant\n"
@@ -13,7 +13,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.2-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 msgid ""
 "ACLs specify which external ports may be redirected to which internal "
@@ -30,16 +30,16 @@ msgid "Advanced Settings"
 msgstr "進階設定"
 
 msgid "Advertise as IGDv1 device instead of IGDv2"
-msgstr ""
+msgstr "宣傳為IGDv1設備而不是IGDv2"
 
 msgid "Allow adding forwards only to requesting ip addresses"
 msgstr "只允許請求的IP位址新增從導機制"
 
 msgid "Announced model number"
-msgstr "已宣告模組號碼"
+msgstr "通告的型號"
 
 msgid "Announced serial number"
-msgstr "已宣告序號"
+msgstr "通告的序號"
 
 msgid "Clean rules interval"
 msgstr "清除規則間隔"
@@ -69,10 +69,10 @@ msgid "Device UUID"
 msgstr "設備UUID獨立識別碼"
 
 msgid "Downlink"
-msgstr "下載"
+msgstr "下行"
 
 msgid "Enable IGDv1 mode"
-msgstr ""
+msgstr "啟用IGDv1模式"
 
 msgid "Enable NAT-PMP functionality"
 msgstr "啓用蘋果NAT-PMP傳輸埠對應通訊協定功能"
@@ -108,13 +108,13 @@ msgid "MiniUPnP settings"
 msgstr "小型UPnP存取控制清單設定"
 
 msgid "Notify interval"
-msgstr "提醒間隔"
+msgstr "通知的時間間隔"
 
 msgid "Port"
 msgstr "埠"
 
 msgid "Presentation URL"
-msgstr "介紹URL連結"
+msgstr "介紹網址"
 
 msgid "Protocol"
 msgstr "協定"
@@ -129,7 +129,7 @@ msgid "Start UPnP and NAT-PMP service"
 msgstr "啓用UPnP跟NAT-PMP服務"
 
 msgid "There are no active redirects."
-msgstr "目前無作用中的從導"
+msgstr "沒有活動的重定向."
 
 msgid "UPnP"
 msgstr "UPnP"
@@ -137,7 +137,7 @@ msgstr "UPnP"
 msgid ""
 "UPnP allows clients in the local network to automatically configure the "
 "router."
-msgstr "開放本地用戶端自動設定路由器UPNP機制"
+msgstr "UPnP允許本地網絡中的客戶端自動設置路由器."
 
 msgid "UPnP lease file"
 msgstr "UPnP 租賃文件"
@@ -146,7 +146,7 @@ msgid "Universal Plug & Play"
 msgstr "通用隨插即用（UPnP）"
 
 msgid "Uplink"
-msgstr "上行速率"
+msgstr "上行"
 
 msgid "Value in KByte/s, informational only"
 msgstr "值為 KByte/s，僅供參考"
