--- a/applications/luci-app-vnstat/po/ja/vnstat.po
+++ b/applications/luci-app-vnstat/po/ja/vnstat.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"PO-Revision-Date: 2020-06-13 22:13+0000\n"
-"Last-Translator: Satoru Yoshida <ramat@ram.ne.jp>\n"
+"PO-Revision-Date: 2020-12-10 19:29+0000\n"
+"Last-Translator: Ryota <21ryotagamer@gmail.com>\n"
 "Language-Team: Japanese <https://hosted.weblate.org/projects/openwrt/"
 "luciapplicationsvnstat/ja/>\n"
 "Language: ja\n"
@@ -10,32 +10,32 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.1-dev\n"
+"X-Generator: Weblate 4.4-dev\n"
 
 msgid "Configuration"
 msgstr "設定"
 
 msgid "Daily traffic"
-msgstr "１日周期のトラフィック"
+msgstr "毎日のトラフィック"
 
 msgid "Graphs"
 msgstr "グラフ"
 
 msgid "Hourly traffic"
-msgstr "１時間周期のトラフィック"
+msgstr "1時間ごとのトラフィック"
 
 msgid "Monitor selected interfaces"
-msgstr "モニターするインターフェースを選択"
+msgstr "監視するインターフェース"
 
 msgid "Monthly traffic"
-msgstr "１月周期のトラフィック"
+msgstr "毎月のトラフィック"
 
 msgid ""
 "No database has been set up yet. Go to the VnStat configuration and enable "
 "monitoring for one or more interfaces."
 msgstr ""
-"データベースが設定されていません。VnStat設定ページへ移動し、１つ以上のイン"
-"ターフェースのモニタリングを有効にしてください。"
+"データベースが設定されていません。VnStat設定ページへ移動し、1つ以上のインター"
+"フェースのモニタリングを有効にしてください。"
 
 msgid "Restart VnStat"
 msgstr "VnStatを再起動"
@@ -53,16 +53,16 @@ msgid "VnStat"
 msgstr "VnStat"
 
 msgid "VnStat Graphs"
-msgstr "VnStat グラフ"
+msgstr "VnStatグラフ"
 
 msgid "VnStat Traffic Monitor"
-msgstr "VnStatトラフィックモニタ"
+msgstr "VnStatトラフィックモニター"
 
 msgid ""
 "VnStat is a network traffic monitor for Linux that keeps a log of network "
 "traffic for the selected interface(s)."
 msgstr ""
-"VnStatは選択したインタフェースのネットワークトラフィックをロギングするLinuxの"
+"VnStatは選択されたインターフェースのネットワークトラフィックを監視するLinuxの"
 "トラフィックモニターです。"
 
 msgid "The VnStat service has been restarted."
