--- a/modules/luci-base/po/ja/base.po
+++ b/modules/luci-base/po/ja/base.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-06-10 03:40+0200\n"
-"PO-Revision-Date: 2020-12-06 13:43+0000\n"
-"Last-Translator: INAGAKI Hiroshi <musashino.open@gmail.com>\n"
+"PO-Revision-Date: 2020-12-28 06:11+0000\n"
+"Last-Translator: Satoru Yoshida <ramat@ram.ne.jp>\n"
 "Language-Team: Japanese <https://hosted.weblate.org/projects/openwrt/luci/ja/"
 ">\n"
 "Language: ja\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.4-dev\n"
+"X-Generator: Weblate 4.4.1-dev\n"
 
 msgid "%s is untagged in multiple VLANs!"
 msgstr "%sは複数のVLANでタグなしに設定されています！"
@@ -1118,7 +1118,7 @@ msgstr "期限切れ"
 
 msgid ""
 "Expiry time of leased addresses, minimum is 2 minutes (<code>2m</code>)."
-msgstr "リース時間は、最短で2分です（<code>2m</code>）。"
+msgstr "リース期間は、最短で2分です（<code>2m</code>）。"
 
 msgid "External"
 msgstr "外部"
@@ -1359,7 +1359,7 @@ msgid "Hermes 802.11b Wireless Controller"
 msgstr "Hermes 802.11b 無線LANコントローラ"
 
 msgid "Hide <abbr title=\"Extended Service Set Identifier\">ESSID</abbr>"
-msgstr "<abbr title=\"Extended Service Set Identifier\">ESSID</abbr>を隠す"
+msgstr "<abbr title=\"Extended Service Set Identifier\">ESSID</abbr>を非表示"
 
 msgid "Host"
 msgstr "ホスト"
@@ -1713,7 +1713,7 @@ msgid "Leaf"
 msgstr "Leaf"
 
 msgid "Lease time"
-msgstr "リース時間"
+msgstr "リース期間"
 
 msgid "Lease validity time"
 msgstr "リース有効時間"
@@ -2262,10 +2262,13 @@ msgstr ""
 "（例: '::1'）を指定します（オプション） 。使用できる値: 'eui64','random'また"
 "は'::1'や'::1:2'のような固定値。"
 
+#, fuzzy
 msgid ""
 "Optional. Base64-encoded preshared key. Adds in an additional layer of "
 "symmetric-key cryptography for post-quantum resistance."
 msgstr ""
+"Base64でエンコードされた事前共有キーです。ポスト量子レジスタンスのため、対称"
+"鍵暗号の追加層を追加します（オプション）。"
 
 msgid "Optional. Create routes for Allowed IPs for this peer."
 msgstr "このピアの許可されたIPのルートを作成します（オプション）。"
@@ -3111,7 +3114,7 @@ msgid "Suppress logging"
 msgstr "ログの抑制"
 
 msgid "Suppress logging of the routine operation of these protocols"
-msgstr "これらのプロトコルの、日常的な操作のログを抑制"
+msgstr "これらのプロトコルの、ルーチン操作のログを抑制"
 
 msgid "Swap"
 msgstr "スワップ"
@@ -3131,7 +3134,8 @@ msgstr "スイッチ %q (%s)"
 msgid ""
 "Switch %q has an unknown topology - the VLAN settings might not be accurate."
 msgstr ""
-"スイッチ%qには不明なトポロジがあります-VLAN設定は正確でないかもしれません。"
+"スイッチ %qには不明なトポロジがあります - VLAN設定は正確でないかもしれませ"
+"ん。"
 
 msgid "Switch VLAN"
 msgstr "スイッチVLAN"
@@ -3379,16 +3383,15 @@ msgid ""
 "configurations are automatically preserved."
 msgstr ""
 "これはsysupgrade中にバックアップ対象に含めるファイルとディレクトリのグロブパ"
-"ターンリストです。/etc/config/ 内の設定ファイル及びその他の変更された設定ファ"
-"イルは自動的に保持されます。"
+"ターンリストです。/etc/config/ 内及びその他特定の設定の変更されたファイルは自"
+"動的に保持されます。"
 
-#, fuzzy
 msgid ""
 "This is either the \"Update Key\" configured for the tunnel or the account "
 "password if no update key has been configured"
 msgstr ""
 "これはトンネルに対して設定された\"更新キー\"か、更新キーが設定されていない場"
-"合はアカウントパスワードのどちらかです。"
+"合はアカウントパスワードのどちらかです"
 
 msgid ""
 "This is the content of /etc/rc.local. Insert your own commands here (in "
@@ -3412,7 +3415,7 @@ msgstr ""
 "Configuration Protocol\">DHCP</abbr>です"
 
 msgid "This is the plain username for logging into the account"
-msgstr "これはアカウントにログインするための普通のユーザー名です"
+msgstr "これはアカウントにログインするためのプレーンなユーザー名です"
 
 msgid ""
 "This is the prefix routed to you by the tunnel broker for use by clients"
@@ -3603,16 +3606,16 @@ msgid "Use as external overlay (/overlay)"
 msgstr "外部オーバーレイとして使用（/overlay）"
 
 msgid "Use as root filesystem (/)"
-msgstr "ルート ファイルシステムとして使用（/）"
+msgstr "ルートファイルシステムとして使用（/）"
 
 msgid "Use broadcast flag"
 msgstr "ブロードキャストフラグを使用"
 
 msgid "Use builtin IPv6-management"
-msgstr "ビルトインのIPv6マネジメントを使用"
+msgstr "ビルトインIPv6管理を使用"
 
 msgid "Use custom DNS servers"
-msgstr "DNSサーバーを手動で設定"
+msgstr "カスタムDNSサーバーを使用"
 
 msgid "Use default gateway"
 msgstr "デフォルトゲートウェイを使用"
@@ -3621,7 +3624,7 @@ msgid "Use gateway metric"
 msgstr "ゲートウェイメトリックを使用"
 
 msgid "Use routing table"
-msgstr "ルーティング テーブルの使用"
+msgstr "ルーティングテーブルを使用"
 
 msgid ""
 "Use the <em>Add</em> Button to add a new lease entry. The <em>MAC-Address</"
@@ -3636,7 +3639,7 @@ msgstr ""
 "ト名をアサインします。"
 
 msgid "Used"
-msgstr "使用"
+msgstr "使用中"
 
 msgid "Used Key Slot"
 msgstr "使用するキースロット"
@@ -3645,20 +3648,20 @@ msgid ""
 "Used for two different purposes: RADIUS NAS ID and 802.11r R0KH-ID. Not "
 "needed with normal WPA(2)-PSK."
 msgstr ""
-"2つの異なる目的のために使用されています: RADIUS NAS IDと802.11r R0KH-ID。通常"
-"のWPA（2）-PSKは必要ありません。"
+"RADIUS NAS IDと802.11r R0KH-IDの2つの異なる目的のために使用中です。通常の"
+"WPA（2）-PSKは必要ありません。"
 
 msgid "User certificate (PEM encoded)"
-msgstr "ユーザー証明書（PEM エンコード）"
+msgstr "ユーザー証明書（PEMエンコード）"
 
 msgid "User key (PEM encoded)"
-msgstr "ユーザー秘密鍵（PEM エンコード）"
+msgstr "ユーザー鍵（PEMエンコード）"
 
 msgid "Username"
 msgstr "ユーザー名"
 
 msgid "VC-Mux"
-msgstr "VC-Mux"
+msgstr "VC多重化"
 
 msgid "VDSL"
 msgstr "VDSL"
@@ -3670,10 +3673,10 @@ msgid "VLANs on %q (%s)"
 msgstr "%q上のVLAN (%s)"
 
 msgid "VPN Local address"
-msgstr "VPN ローカルアドレス"
+msgstr "VPNローカルアドレス"
 
 msgid "VPN Local port"
-msgstr "VPN ローカルポート"
+msgstr "VPNローカルポート"
 
 msgid "VPN Server"
 msgstr "VPNサーバー"
@@ -3691,7 +3694,7 @@ msgid "Vendor"
 msgstr "ベンダー"
 
 msgid "Vendor Class to send when requesting DHCP"
-msgstr "DHCPリクエスト送信時のベンダークラスを設定"
+msgstr "DHCPリクエスト時に送信するベンダークラス"
 
 msgid "Verbose"
 msgstr ""
@@ -3709,27 +3712,27 @@ msgid "WDS"
 msgstr "WDS"
 
 msgid "WEP Open System"
-msgstr "WEP オープンシステム"
+msgstr "WEPオープンシステム"
 
 msgid "WEP Shared Key"
-msgstr "WEP 共有キー"
+msgstr "WEP共有キー"
 
 msgid "WEP passphrase"
-msgstr "WEP 暗号フレーズ"
+msgstr "WEP暗号フレーズ"
 
 msgid "WMM Mode"
-msgstr "WMM モード"
+msgstr "WMMモード"
 
 msgid "WPA passphrase"
-msgstr "WPA 暗号フレーズ"
+msgstr "WPA暗号フレーズ"
 
 msgid ""
 "WPA-Encryption requires wpa_supplicant (for client mode) or hostapd (for AP "
 "and ad-hoc mode) to be installed."
 msgstr ""
-"WPA暗号化を使用する場合、wpa_supplicant（クライアントモードの場合）又は "
-"hostapd（アクセスポイント及びアドホック）がインストールされている必要がありま"
-"す。"
+"WPA暗号化を使用するには、wpa_supplicant（クライアントモードを使用する場合）ま"
+"たはhostapd（アクセスポイントとアドホックモードを使用する場合）がインストール"
+"されている必要があります。"
 
 msgid ""
 "Wait for NTP sync that many seconds, seting to 0 disables waiting (optional)"
@@ -3748,7 +3751,7 @@ msgid "Warning"
 msgstr "警告"
 
 msgid "Warning: There are unsaved changes that will get lost on reboot!"
-msgstr "警告: 再起動すると消えてしまう、保存されていない設定があります！"
+msgstr "警告: 再起動で失われる、保留中の設定があります！"
 
 msgid "Whether to create an IPv6 default route over the tunnel"
 msgstr ""
@@ -3772,10 +3775,10 @@ msgid "Wireless Network"
 msgstr "無線ネットワーク"
 
 msgid "Wireless Overview"
-msgstr "無線LANデバイス一覧"
+msgstr "無線デバイス一覧"
 
 msgid "Wireless Security"
-msgstr "無線LANセキュリティ"
+msgstr "無線セキュリティ"
 
 msgid "Wireless is disabled or not associated"
 msgstr "無線LAN機能が無効になっているか、アソシエーションされていません"
@@ -3784,10 +3787,10 @@ msgid "Wireless is restarting..."
 msgstr "無線LAN機能再起動中..."
 
 msgid "Wireless network is disabled"
-msgstr "無線LAN機能は無効になっています"
+msgstr "無線ネットワークは無効"
 
 msgid "Wireless network is enabled"
-msgstr "無線LAN機能は有効になっています"
+msgstr "無線ネットワークは有効"
 
 msgid "Wireless restarted"
 msgstr "無線LAN機能の再起動"
@@ -3796,7 +3799,7 @@ msgid "Wireless shut down"
 msgstr "無線LAN機能停止"
 
 msgid "Write received DNS requests to syslog"
-msgstr "受信したDNSリクエストをsyslogへ記録します"
+msgstr "受信したDNSリクエストをsyslogへ記録"
 
 msgid "Write system log to file"
 msgstr "システムログをファイルに書き込む"
@@ -3806,9 +3809,9 @@ msgid ""
 "after a device reboot.<br /><strong>Warning: If you disable essential init "
 "scripts like \"network\", your device might become inaccessible!</strong>"
 msgstr ""
-"ルーターが起動する際のサービスの有効化/無効化を行うことができます。また、変更"
-"は再起動後に適用されます。<br /><strong>警告: \"network\" のような重要なサー"
-"ビスを無効にするとルーターにアクセスできなくなります！</strong>"
+"ここで、インストール済みのinitスクリプトの有効または無効を切り替えられます。"
+"変更は再起動後に適用されます。<br /><strong>警告: \"network\"などの重要なスク"
+"リプトを無効にするとデバイスにアクセスできなくなることがあります！</strong>"
 
 msgid ""
 "You must enable JavaScript in your browser or LuCI will not work properly."
@@ -3860,8 +3863,8 @@ msgid ""
 "file where given <abbr title=\"Dynamic Host Configuration Protocol\">DHCP</"
 "abbr>-leases will be stored"
 msgstr ""
-"<abbr title=\"Dynamic Host Configuration Protocol\">DHCP</abbr>リース情報を記"
-"録するファイル"
+"<abbr title=\"Dynamic Host Configuration Protocol\">DHCP</abbr>リースが記録さ"
+"れるファイル"
 
 msgid "forward"
 msgstr "転送"
@@ -3876,10 +3879,10 @@ msgid "help"
 msgstr "ヘルプ"
 
 msgid "hidden"
-msgstr "（ステルス）"
+msgstr "（非表示）"
 
 msgid "hybrid mode"
-msgstr "ハイブリッド モード"
+msgstr "ハイブリッドモード"
 
 msgid "if target is a network"
 msgstr "ターゲットがネットワークの場合"
@@ -3897,7 +3900,7 @@ msgid "kbit/s"
 msgstr "kbit/s"
 
 msgid "local <abbr title=\"Domain Name System\">DNS</abbr> file"
-msgstr "ローカル <abbr title=\"Domain Name System\">DNS</abbr>ファイル"
+msgstr "ローカル<abbr title=\"Domain Name System\">DNS</abbr>ファイル"
 
 msgid "minimum 1280, maximum 1480"
 msgstr "最小値 1280、最大値 1480"
@@ -3930,10 +3933,10 @@ msgid "overlay"
 msgstr "オーバーレイ"
 
 msgid "relay mode"
-msgstr "リレー モード"
+msgstr "リレーモード"
 
 msgid "routed"
-msgstr "ルーテッド"
+msgstr "ルート"
 
 msgid "server mode"
 msgstr "サーバーモード"
@@ -3951,7 +3954,7 @@ msgid "tagged"
 msgstr "タグ付き"
 
 msgid "time units (TUs / 1.024 ms) [1000-65535]"
-msgstr "時間の単位（TUs / 1.024ミリ秒）[1000-65535]"
+msgstr "時間単位（TUs/1.024ミリ秒）[1000-65535]"
 
 msgid "unknown"
 msgstr "不明"
@@ -3960,10 +3963,10 @@ msgid "unlimited"
 msgstr "無制限"
 
 msgid "unspecified"
-msgstr "設定しない"
+msgstr "未設定"
 
 msgid "unspecified -or- create:"
-msgstr "設定しない -又は- 作成:"
+msgstr "未設定 -または- 作成:"
 
 msgid "untagged"
 msgstr "タグなし"
