--- a/modules/luci-base/po/ko/base.po
+++ b/modules/luci-base/po/ko/base.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-06-10 03:40+0200\n"
-"PO-Revision-Date: 2020-08-08 06:14+0000\n"
-"Last-Translator: Youngbin Han <sukso96100@gmail.com>\n"
+"PO-Revision-Date: 2020-12-19 09:40+0000\n"
+"Last-Translator: orangepizza <abnoeh@mail.com>\n"
 "Language-Team: Korean <https://hosted.weblate.org/projects/openwrt/luci/ko/"
 ">\n"
 "Language: ko\n"
@@ -12,10 +12,10 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n == 1 ? 0 : 1;\n"
-"X-Generator: Weblate 4.2-dev\n"
+"X-Generator: Weblate 4.4-dev\n"
 
 msgid "%s is untagged in multiple VLANs!"
-msgstr ""
+msgstr "%s 는 여러 VLAN에서 태그 없음으로 설정되었습니다!"
 
 msgid "(%d minute window, %d second interval)"
 msgstr "(%d 분 window, %d 초 간격)"
@@ -30,22 +30,23 @@ msgid "(no interfaces attached)"
 msgstr "(연결된 인터페이스 없음)"
 
 msgid "-- Additional Field --"
-msgstr ""
+msgstr "-- 추가 설정 --"
 
 msgid "-- Please choose --"
 msgstr "-- 선택하세요 --"
 
+#, fuzzy
 msgid "-- custom --"
-msgstr ""
+msgstr "-- custom --"
 
 msgid "-- match by device --"
 msgstr ""
 
 msgid "-- match by label --"
-msgstr ""
+msgstr "--label로 지정 --"
 
 msgid "-- match by uuid --"
-msgstr ""
+msgstr "-- uuid로 지정 --"
 
 msgid "1 Minute Load:"
 msgstr "1분 부하:"
@@ -56,32 +57,33 @@ msgstr "15분 부하:"
 msgid "4-character hexadecimal ID"
 msgstr "4자리 16진수 ID"
 
+#, fuzzy
 msgid "464XLAT (CLAT)"
-msgstr ""
+msgstr "464XLAT (CLAT)"
 
 msgid "5 Minute Load:"
 msgstr "5분 부하:"
 
 msgid "6-octet identifier as a hex string - no colons"
-msgstr ""
+msgstr "6옥텟 식별자를 : 없는 16진수로"
 
 msgid "802.11r Fast Transition"
 msgstr ""
 
 msgid "802.11w Association SA Query maximum timeout"
-msgstr ""
+msgstr "802.11w Association SA 쿼리 최대 대기 시간"
 
 msgid "802.11w Association SA Query retry timeout"
-msgstr ""
+msgstr "802.11w Association SA 쿼리 재시도 최대 대기 시간"
 
 msgid "802.11w Management Frame Protection"
-msgstr ""
+msgstr "802.11w 관리 프레임 보호 (Management Frame Protection)"
 
 msgid "802.11w maximum timeout"
-msgstr ""
+msgstr "802.11w 최대 대기 시간"
 
 msgid "802.11w retry timeout"
-msgstr ""
+msgstr "802.11w 재시도 대기 시간"
 
 msgid "<abbr title=\"Basic Service Set Identifier\">BSSID</abbr>"
 msgstr "<abbr title=\"Basic Service Set Identifier\">BSSID</abbr>"
