luci-app-travelmate: adapt luci-18.06
Signed-off-by: CN_SZTL <cnsztl@project-openwrt.eu.org>

--- a/applications/luci-app-travelmate/po/templates/travelmate.pot
+++ b/applications/luci-app-travelmate/po/templates/travelmate.pot
@@ -1,7 +1,10 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=UTF-8"
 
-msgid "Action"
+msgid "Actions"
+msgstr ""
+
+msgid "Add Interface"
 msgstr ""
 
 msgid "Add Uplink"
@@ -53,7 +56,7 @@ msgstr ""
 msgid "Connection Limit"
 msgstr ""
 
-msgid "Create Uplink interface"
+msgid "Create Uplink Interface"
 msgstr ""
 
 msgid ""
@@ -67,9 +70,6 @@ msgid "Delete this Uplink"
 msgstr ""
 
 msgid "Device"
-msgstr ""
-
-msgid "Down"
 msgstr ""
 
 msgid "EAP-Method"
@@ -106,9 +106,6 @@ msgid "Encryption"
 msgstr ""
 
 msgid "Extra options"
-msgstr ""
-
-msgid "Faulty Stations"
 msgstr ""
 
 msgid "Find and join network on"
@@ -153,10 +150,7 @@ msgstr ""
 msgid "Interface Wizard"
 msgstr ""
 
-msgid "Last Run"
-msgstr ""
-
-msgid "Loading"
+msgid "Last rundate"
 msgstr ""
 
 msgid ""
@@ -210,7 +204,7 @@ msgstr ""
 msgid ""
 "Provides an overview of all configured uplinks for the travelmate interface "
 "(%s). You can edit, delete or re-order existing uplinks or scan for a new "
-"one. The currently used uplink is emphasized in blue, faulty stations in red."
+"one. The currently used uplink is emphasized in blue."
 msgstr ""
 
 msgid "QR-Codes"
@@ -220,12 +214,6 @@ msgid "Radio selection"
 msgstr ""
 
 msgid "Repeat scan"
-msgstr ""
-
-msgid "Restart"
-msgstr ""
-
-msgid "Restart Travelmate"
 msgstr ""
 
 msgid "Restrict travelmate to a dedicated radio, e.g. 'radio0'."
@@ -255,17 +243,17 @@ msgstr ""
 msgid "Signal strength"
 msgstr ""
 
-msgid "Station ID (RADIO/SSID/BSSID)"
+msgid "Station ID (SSID/BSSID)"
 msgstr ""
 
 msgid "Station Interface"
 msgstr ""
 
-msgid ""
-"The BSSID information '%s' is optional and only required for hidden networks"
+msgid "Station Radio"
 msgstr ""
 
-msgid "The syslog output, pre-filtered for travelmate related messages only."
+msgid ""
+"The BSSID information '%s' is optional and only required for hidden networks"
 msgstr ""
 
 msgid ""
@@ -288,10 +276,15 @@ msgid ""
 "configuration file (/etc/config/wireless)."
 msgstr ""
 
-msgid "This step has only to be done once."
+msgid ""
+"This form shows the syslog output, pre-filtered for travelmate related "
+"messages only."
 msgstr ""
 
 msgid "Travelmate"
+msgstr ""
+
+msgid "Travelmate Logfile"
 msgstr ""
 
 msgid "Travelmate Status (Quality)"
@@ -306,9 +299,6 @@ msgstr ""
 msgid "Unknown"
 msgstr ""
 
-msgid "Up"
-msgstr ""
-
 msgid "Uplink / Trigger interface"
 msgstr ""
 
@@ -316,6 +306,9 @@ msgid "Uplink BSSID"
 msgstr ""
 
 msgid "Uplink SSID"
+msgstr ""
+
+msgid "Uplink interface"
 msgstr ""
 
 msgid "View AP QR-Codes"
@@ -348,8 +341,12 @@ msgstr ""
 msgid "Wireless Stations"
 msgstr ""
 
-msgid "add it to the wan zone of the firewall."
+msgid ""
+"add it to the wan zone of the firewall. This step has only to be done once."
 msgstr ""
 
 msgid "hidden"
+msgstr ""
+
+msgid "n/a"
 msgstr ""
