--- a/applications/luci-app-travelmate/po/ja/travelmate.po
+++ b/applications/luci-app-travelmate/po/ja/travelmate.po
@@ -1,20 +1,22 @@
 msgid ""
 msgstr ""
+"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2020-11-29 22:23+0000\n"
-"Last-Translator: Ryota <21ryotagamer@gmail.com>\n"
-"Language-Team: Japanese <https://hosted.weblate.org/projects/openwrt/"
-"luciapplicationstravelmate/ja/>\n"
-"Language: ja\n"
+"PO-Revision-Date: \n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 2.0.6\n"
+"Last-Translator: INAGAKI Hiroshi <musashino.open@gmail.com>\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.4-dev\n"
+"Language: ja\n"
 
-msgid "Action"
-msgstr "アクション"
+msgid "Actions"
+msgstr "操作"
+
+msgid "Add Interface"
+msgstr "インターフェースの追加"
 
 msgid "Add Uplink"
 msgstr "アップリンクの追加"
@@ -69,7 +71,7 @@ msgstr ""
 msgid "Connection Limit"
 msgstr "接続制限"
 
-msgid "Create Uplink interface"
+msgid "Create Uplink Interface"
 msgstr "アップリンク インターフェースの作成"
 
 msgid ""
@@ -87,11 +89,8 @@ msgstr "このアップリンクを削除"
 msgid "Device"
 msgstr "デバイス"
 
-msgid "Down"
-msgstr "下へ"
-
 msgid "EAP-Method"
-msgstr "EAPメソッド"
+msgstr "EAP メソッド"
 
 msgid "Edit"
 msgstr "編集"
@@ -126,9 +125,6 @@ msgstr "暗号化"
 msgid "Extra options"
 msgstr "拡張オプション"
 
-msgid "Faulty Stations"
-msgstr "問題のあるステーション"
-
 msgid "Find and join network on"
 msgstr "ネットワークの検索と参加:"
 
@@ -146,7 +142,7 @@ msgid "Force TKIP"
 msgstr "TKIP"
 
 msgid "Force TKIP and CCMP (AES)"
-msgstr "TKIP 及びCCMP (AES)"
+msgstr "TKIP と CCMP (AES)"
 
 msgid ""
 "Here you'll find the QR codes from all of your configured Access Points. It "
@@ -162,7 +158,7 @@ msgid ""
 msgstr "Travelmate が無線アップリンクへの接続成功を待つ時間です。"
 
 msgid "Identity"
-msgstr "識別子"
+msgstr "ID"
 
 msgid "Ignore BSSID"
 msgstr "BSSID の無視"
@@ -176,11 +172,8 @@ msgstr "インターフェース タイムアウト"
 msgid "Interface Wizard"
 msgstr "インターフェース ウィザード"
 
-msgid "Last Run"
-msgstr "最終実行"
-
-msgid "Loading"
-msgstr "読み込み中"
+msgid "Last rundate"
+msgstr "最終実行日時"
 
 msgid ""
 "Minimum signal quality threshold as percent for conditional uplink (dis-) "
@@ -190,10 +183,10 @@ msgstr ""
 "す。"
 
 msgid "Move down"
-msgstr "下へ移動"
+msgstr "下へ"
 
 msgid "Move up"
-msgstr "上へ移動"
+msgstr "上へ"
 
 msgid "Name of the used uplink interface."
 msgstr "使用されるアップリンク インターフェースの名前です。"
@@ -209,7 +202,7 @@ msgid "Overall Timeout"
 msgstr "実行間隔"
 
 msgid "Overall retry timeout in seconds."
-msgstr "全体的な再試行タイムアウト（秒）です。"
+msgstr ""
 
 msgid "Overview"
 msgstr "概要"
@@ -224,18 +217,18 @@ msgid "Password of Private Key"
 msgstr "秘密鍵のパスワード"
 
 msgid "Path to CA-Certificate"
-msgstr "CA証明書のパス"
+msgstr "CA 証明書へのパス"
 
 msgid "Path to Client-Certificate"
-msgstr "クライアント証明書のパス"
+msgstr "クライアント証明書へのパス"
 
 msgid "Path to Private Key"
-msgstr "秘密鍵のパス"
+msgstr "秘密鍵へのパス"
 
 msgid ""
 "Provides an overview of all configured uplinks for the travelmate interface "
 "(%s). You can edit, delete or re-order existing uplinks or scan for a new "
-"one. The currently used uplink is emphasized in blue, faulty stations in red."
+"one. The currently used uplink is emphasized in blue."
 msgstr ""
 "Travelmate 用インターフェース（%s）に設定済みの全アップリンクの一覧です。既存"
 "のアップリンクの編集や削除、並べ替えを行ったり、スキャンを行って新規アップリ"
@@ -251,12 +244,6 @@ msgstr "無線の選択"
 msgid "Repeat scan"
 msgstr "再スキャン"
 
-msgid "Restart"
-msgstr "再起動"
-
-msgid "Restart Travelmate"
-msgstr "Travelmate の再起動"
-
 msgid "Restrict travelmate to a dedicated radio, e.g. 'radio0'."
 msgstr "Travelmate が指定された無線に接続するよう制御します。（例: 'radio0'）"
 
@@ -264,7 +251,7 @@ msgid "Retry limit to connect to an uplink."
 msgstr "アップリンクへの接続を試行する回数です。"
 
 msgid "Runtime Information"
-msgstr "ランタイム情報"
+msgstr "実行情報"
 
 msgid "SSID"
 msgstr "SSID"
@@ -276,7 +263,7 @@ msgid "Save"
 msgstr "保存"
 
 msgid "Scan"
-msgstr "スキャン"
+msgstr "スキャン:"
 
 msgid "Signal Quality Threshold"
 msgstr "シグナル品質閾値"
@@ -284,22 +271,18 @@ msgstr "シグナル品質閾値"
 msgid "Signal strength"
 msgstr "信号強度"
 
-msgid "Station ID (RADIO/SSID/BSSID)"
-msgstr "ステーション ID (RADIO / SSID / BSSID)"
+msgid "Station ID (SSID/BSSID)"
+msgstr "ステーション ID (SSID / BSSID)"
 
 msgid "Station Interface"
 msgstr "ステーション インターフェース"
 
+msgid "Station Radio"
+msgstr "ステーション電波"
+
 msgid ""
 "The BSSID information '%s' is optional and only required for hidden networks"
 msgstr ""
-"BSSID 情報 '%s' はオプションであり、ステルス化されたネットワークにのみ必要で"
-"す。"
-
-msgid "The syslog output, pre-filtered for travelmate related messages only."
-msgstr ""
-"このフォームには、システムログ内の Travelmate に関するメッセージのみが表示さ"
-"れます。"
 
 msgid ""
 "This form allows you to modify the content of the main firewall "
@@ -329,11 +312,18 @@ msgstr ""
 "このフォームでは、無線 設定ファイル (/etc/config/wireless) の内容を変更するこ"
 "とができます。"
 
-msgid "This step has only to be done once."
-msgstr "この手順は、一度だけ実行される必要があります。"
+msgid ""
+"This form shows the syslog output, pre-filtered for travelmate related "
+"messages only."
+msgstr ""
+"このフォームには、システムログ内の Travelmate に関するメッセージのみが表示さ"
+"れます。"
 
 msgid "Travelmate"
 msgstr "Travelmate"
+
+msgid "Travelmate Logfile"
+msgstr "Travelmate ログファイル"
 
 msgid "Travelmate Status (Quality)"
 msgstr "Travelmate ステータス（品質）"
@@ -347,9 +337,6 @@ msgstr "トリガ遅延"
 msgid "Unknown"
 msgstr "不明"
 
-msgid "Up"
-msgstr "上へ"
-
 msgid "Uplink / Trigger interface"
 msgstr "アップリンク / トリガー インターフェース"
 
@@ -358,6 +345,9 @@ msgstr "アップリンク BSSID"
 
 msgid "Uplink SSID"
 msgstr "アップリンク SSID"
+
+msgid "Uplink interface"
+msgstr "アップリンク インターフェース"
 
 msgid "View AP QR-Codes"
 msgstr "AP QR-コードを確認"
@@ -389,17 +379,37 @@ msgstr "無線スキャン"
 msgid "Wireless Stations"
 msgstr "無線ステーション"
 
-msgid "add it to the wan zone of the firewall."
-msgstr "ファイアウォールの wan ゾーンに追加します。"
+msgid ""
+"add it to the wan zone of the firewall. This step has only to be done once."
+msgstr ""
+"ファイアウォールの wan ゾーンに追加します。このステップは、一度だけ実行される"
+"必要があります。"
 
 msgid "hidden"
-msgstr "（ステルス）"
-
-msgid "Station Radio"
-msgstr "ステーション電波"
-
-msgid "Travelmate Logfile"
-msgstr "Travelmate ログファイル"
+msgstr "（不明）"
 
 msgid "n/a"
 msgstr "利用不可"
+
+#~ msgid "Enable 'automatic' mode"
+#~ msgstr "'automatic' モードの有効化"
+
+#~ msgid "Force a manual uplink rescan / reconnect in 'trigger' mode."
+#~ msgstr ""
+#~ "'trigger' モード時に、手動でアップリンクの再スキャンと再接続を行います。"
+
+#~ msgid ""
+#~ "Keep travelmate in an active state. Check every n seconds the connection "
+#~ "status, i.e. the uplink availability."
+#~ msgstr ""
+#~ "Travelmate をアクティブ状態で維持します。\"実行間隔\" で設定された時間毎"
+#~ "（秒）に、アップリンクの可用性を確認するために接続状態をチェックします"
+
+#~ msgid "Manual Rescan"
+#~ msgstr "手動再スキャン"
+
+#~ msgid "Rescan"
+#~ msgstr "再スキャン"
+
+#~ msgid "Timeout in seconds between retries in 'automatic' mode."
+#~ msgstr "'automatic' モード時に接続を確認または再試行する間隔（秒）です。"
