--- a/applications/luci-app-travelmate/po/pt-br/travelmate.po
+++ b/applications/luci-app-travelmate/po/pt-br/travelmate.po
@@ -12,7 +12,10 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "Language: pt_BR\n"
 
-msgid "Action"
+msgid "Actions"
+msgstr ""
+
+msgid "Add Interface"
 msgstr ""
 
 msgid "Add Uplink"
@@ -64,7 +67,7 @@ msgstr ""
 msgid "Connection Limit"
 msgstr ""
 
-msgid "Create Uplink interface"
+msgid "Create Uplink Interface"
 msgstr ""
 
 msgid ""
@@ -78,9 +81,6 @@ msgid "Delete this Uplink"
 msgstr ""
 
 msgid "Device"
-msgstr ""
-
-msgid "Down"
 msgstr ""
 
 msgid "EAP-Method"
@@ -118,9 +118,6 @@ msgstr ""
 
 msgid "Extra options"
 msgstr "Opções adicionais"
-
-msgid "Faulty Stations"
-msgstr ""
 
 msgid "Find and join network on"
 msgstr ""
@@ -164,10 +161,7 @@ msgstr ""
 msgid "Interface Wizard"
 msgstr ""
 
-msgid "Last Run"
-msgstr ""
-
-msgid "Loading"
+msgid "Last rundate"
 msgstr ""
 
 msgid ""
@@ -221,7 +215,7 @@ msgstr ""
 msgid ""
 "Provides an overview of all configured uplinks for the travelmate interface "
 "(%s). You can edit, delete or re-order existing uplinks or scan for a new "
-"one. The currently used uplink is emphasized in blue, faulty stations in red."
+"one. The currently used uplink is emphasized in blue."
 msgstr ""
 
 msgid "QR-Codes"
@@ -231,12 +225,6 @@ msgid "Radio selection"
 msgstr ""
 
 msgid "Repeat scan"
-msgstr ""
-
-msgid "Restart"
-msgstr ""
-
-msgid "Restart Travelmate"
 msgstr ""
 
 msgid "Restrict travelmate to a dedicated radio, e.g. 'radio0'."
@@ -266,17 +254,17 @@ msgstr ""
 msgid "Signal strength"
 msgstr ""
 
-msgid "Station ID (RADIO/SSID/BSSID)"
+msgid "Station ID (SSID/BSSID)"
 msgstr ""
 
 msgid "Station Interface"
 msgstr ""
 
-msgid ""
-"The BSSID information '%s' is optional and only required for hidden networks"
+msgid "Station Radio"
 msgstr ""
 
-msgid "The syslog output, pre-filtered for travelmate related messages only."
+msgid ""
+"The BSSID information '%s' is optional and only required for hidden networks"
 msgstr ""
 
 msgid ""
@@ -299,11 +287,16 @@ msgid ""
 "configuration file (/etc/config/wireless)."
 msgstr ""
 
-msgid "This step has only to be done once."
+msgid ""
+"This form shows the syslog output, pre-filtered for travelmate related "
+"messages only."
 msgstr ""
 
 msgid "Travelmate"
 msgstr "Travelmate"
+
+msgid "Travelmate Logfile"
+msgstr ""
 
 msgid "Travelmate Status (Quality)"
 msgstr ""
@@ -317,9 +310,6 @@ msgstr ""
 msgid "Unknown"
 msgstr ""
 
-msgid "Up"
-msgstr ""
-
 msgid "Uplink / Trigger interface"
 msgstr ""
 
@@ -327,6 +317,9 @@ msgid "Uplink BSSID"
 msgstr ""
 
 msgid "Uplink SSID"
+msgstr ""
+
+msgid "Uplink interface"
 msgstr ""
 
 msgid "View AP QR-Codes"
@@ -359,10 +352,14 @@ msgstr ""
 msgid "Wireless Stations"
 msgstr ""
 
-msgid "add it to the wan zone of the firewall."
+msgid ""
+"add it to the wan zone of the firewall. This step has only to be done once."
 msgstr ""
 
 msgid "hidden"
+msgstr ""
+
+msgid "n/a"
 msgstr ""
 
 #~ msgid ""
