luci-mod-admin-full: add link to project
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/modules/luci-base/po/en/base.po
+++ b/modules/luci-base/po/en/base.po
@@ -3849,3 +3849,6 @@ msgstr "An additional network will be created if you leave this unchecked."
 
 msgid "CPU"
 msgstr "CPU"
+
+msgid "Source Code"
+msgstr "Source Code"
