luci-mod-status: add project link
Signed-off-by: Tianling Shen <cnsztl@immortalwrt.org>

--- a/modules/luci-base/po/zh_Hans/base.po
+++ b/modules/luci-base/po/zh_Hans/base.po
@@ -8418,6 +8418,9 @@ msgstr "启用 256-QAM"
 msgid "802.11n 2.4Ghz Only"
 msgstr "只适合 802.11n 2.4Ghz"
 
+msgid "Source Code"
+msgstr "源代码"
+
 #~ msgid "Custom delegated IPv6-prefix"
 #~ msgstr "自定义分配的 IPv6 前缀"
 
