--- a/modules/luci-base/po/zh_Hant/base.po
+++ b/modules/luci-base/po/zh_Hant/base.po
@@ -8359,6 +8359,9 @@ msgstr "是"
 msgid "« Back"
 msgstr "« 倒退"
 
+msgid "Source Code"
+msgstr "原始碼"
+
 #~ msgid "Custom delegated IPv6-prefix"
 #~ msgstr "自定義委派 IPv6-prefix(IPv6-前綴)"
 
